--- a/client/src/containers/app/app.css
+++ b/client/src/containers/app/app.css
@@ -1,24 +1,23 @@
-.App {
+.app {
   text-align: center;
   display: flex;
   flex-direction: column;
   height: 100vh;
 }
-.Sidebar {
+.app__sidebar {
   text-align: left;
 }
-.mainContent {
+.app__content {
   margin: 20px 40px;
   overflow: auto;
   display: flex;
   flex: 1;
 
 }
-a {
+.app__sidebar__link {
   position: relative; 
   display: block;
   padding-left: 16px; 
-  padding-right: 16px; 
   letter-spacing: 0px; 
   text-transform: uppercase; 
   text-decoration: none;
@@ -27,6 +26,6 @@ a {
   color: black;
   width: 100%;
 }
-a:hover {
+.app__sidebar__link:hover {
   color: #676767;
 }
