--- a/client/src/index.css
+++ b/client/src/index.css
@@ -13,7 +13,7 @@ body {
 	font-style: normal;
 }
 
-[class^="muidocs-icon-"], [class*=" muidocs-icon-"] {
+[class^="material-icon-"], [class*=" material-icon-"] {
 	font-family: 'material-ui-icons';
 	speak: none;
 	font-style: normal;
@@ -27,46 +27,46 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 }
 
-.muidocs-icon-communication-phone:before {
+.material-icon-communication-phone:before {
 	content: "\e601";
 }
 
-.muidocs-icon-communication-voicemail:before {
+.material-icon-communication-voicemail:before {
 	content: "\e602";
 }
 
-.muidocs-icon-navigation-expand-more:before {
+.material-icon-navigation-expand-more:before {
 	content: "\e603";
 }
 
-.muidocs-icon-action-grade:before {
+.material-icon-action-grade:before {
 	content: "\e604";
 }
 
-.muidocs-icon-action-home:before {
+.material-icon-action-home:before {
 	content: "\e605";
 }
 
-.muidocs-icon-action-stars:before {
+.material-icon-action-stars:before {
 	content: "\e606";
 }
 
-.muidocs-icon-action-thumb-up:before {
+.material-icon-action-thumb-up:before {
 	content: "\e607";
 }
 
-.muidocs-icon-custom-sort:before {
+.material-icon-custom-sort:before {
 	content: "\e600";
 }
 
-.muidocs-icon-custom-github:before {
+.material-icon-custom-github:before {
 	content: "\e625";
 }
 
-.muidocs-icon-custom-arrow-drop-right:before {
+.material-icon-custom-arrow-drop-right:before {
 	content: "\e60b";
 }
 
-.muidocs-icon-custom-pie:before {
+.material-icon-custom-pie:before {
 	content: "\e610";
 }
