--- a/client/src/containers/app/app.css
+++ b/client/src/containers/app/app.css
@@ -8,7 +8,7 @@
   text-align: left;
 }
 .app__content {
-  margin: 20px 40px;
+  margin: 20px auto;
   overflow: auto;
   display: flex;
   flex: 1;
