--- a/client/src/components/frontend/calculator/style.scss
+++ b/client/src/components/frontend/calculator/style.scss
@@ -2,7 +2,7 @@
   width: 236px;
   min-width: 236px;
   max-width: 236px;
-  background: #333;
+  background: #484848;
   margin: 20px auto;
   padding: 20px;
   color: #ffffff;
@@ -38,7 +38,7 @@
     color: #2c2c2c;
     position: relative;
     &:hover {
-      background: #3C3C3C;
+      background: #696969;
       color: #ffffff;
     }
 
@@ -49,7 +49,7 @@
   }
   .calculator__equals {
     width: 112px;
-    background: #1976d2;
+    background: #233E5B;
     color: #ffffff;
   }
   .calculator__clear {
