--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -102,7 +102,7 @@ h3,
 h4,
 h5 {
   font-family: $system-font-stack;
-  margin: 0 0 25px;
+  margin: 0 0 15px;
   font-style: normal;
 }
 
@@ -176,16 +176,21 @@ button {
   text-decoration: none;
   vertical-align: baseline;
   text-align: center;
-  margin: 0;
+  margin: 20px;
   min-width: 88px;
   line-height: 36px;
   padding: 0 $padding/2;
   border-radius: $btn-br;
   margin: 0 $padding/2 0 0;
+  a {
+    color: white;
+    text-decoration: none;
+  }
 }
 .btn-primary {
   background: $primary-color;
   color: white;
+
 }
 .btn-secondary {
   background: $secondary-color;
@@ -194,6 +199,13 @@ button {
 .btn-tertiary {
   background: $tertiary-color;
   color: white;
+}
+input {
+  margin: 10px 10px 10px 0;
+  width: 200px;
+  display: inline-block;
+  padding: 10px;
+  color: $secondary_color;
 }
 
 //**
